--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "filecoin-api"
 version = "0.1.0"
-authors = ["YST-GG <1964937517@11.com>"]
+authors = ["YST-GG <1964937517@qq.com>"]
 edition = "2018"
 
 [profile.release]
@@ -25,9 +25,9 @@ futures = "^0.3"
 futures-core = "*"
 futures-util = "*"
 log = "*"
-fil_logger = "*"
+fil_logger = "0.1.0"
 serde = { version = "1.0.104", features = ["derive"] }
-serde_json = "*"
+serde_json = "1.0.46"
 mime = "*"
 lazy_static = "^1.4"
 libc = "*"
